gerador_roteiros/tests/testfiles/0.9.0/generatorvalidation/valid/mapa_com_ciclo_invalido.mm
<map version="0.9.0">
<!-- To view this file, download free mind mapping software FreeMind from http://freemind.sourceforge.net -->
<node CREATED="1350389222838" ID="ID_659421316" MODIFIED="1350389227120" TEXT="MAPA 1">
<node CREATED="1350389227986" ID="ID_859969559" MODIFIED="1350389240204" POSITION="right" TEXT="UC: UC1&#xa;Requisitos: REQ001&#xa;Pr&#xe9;-condi&#xe7;&#xf5;es: Nada&#xa;P&#xf3;s-condi&#xe7;&#xf5;es: Nada">
<node CREATED="1350389240805" ID="ID_798166887" MODIFIED="1350389258282" TEXT="Sequ&#xea;ncia: 1&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: A&#xe7;&#xe3;o U1">
<node CREATED="1350389242918" ID="ID_1557834897" MODIFIED="1350389269585" TEXT="Sequ&#xea;ncia: 2&#xa;Ator: Sistema&#xa;A&#xe7;&#xe3;o: A&#xe7;&#xe3;o S2">
<node CREATED="1350389244601" ID="ID_1292862202" MODIFIED="1350389277627" TEXT="Sequ&#xea;ncia: 3&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: A&#xe7;&#xe3;o U3">
<node CREATED="1350389246972" ID="ID_1658494596" MODIFIED="1350389288283" TEXT="Sequ&#xea;ncia: 4&#xa;Ator: Sistema&#xa;A&#xe7;&#xe3;o: A&#xe7;&#xe3;o S4">
<node CREATED="1350389250139" ID="ID_1648996574" MODIFIED="1350389298322" TEXT="Sequ&#xea;ncia: 5&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: A&#xe7;&#xe3;o U5">
<node CREATED="1350389298844" ID="ID_353913436" MODIFIED="1350389311520" TEXT="Sequ&#xea;ncia: 6&#xa;Ator: Sistema&#xa;A&#xe7;&#xe3;o: A&#xe7;&#xe3;o S6"/>
</node>
</node>
<node CREATED="1350389318595" ID="ID_1322440800" MODIFIED="1350389330015" TEXT="Sequ&#xea;ncia: 4a.1&#xa;Ator: Sistema&#xa;A&#xe7;&#xe3;o: A&#xe7;&#xe3;o S4a.1">
<node CREATED="1350389330740" ID="ID_1124177281" MODIFIED="1350389345171" TEXT="Sequ&#xea;ncia: 4a.2&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: A&#xe7;&#xe3;o U4a.2">
<node CREATED="1350389347581" ID="ID_1423261373" MODIFIED="1350489517358" TEXT="4a.1">
<icon BUILTIN="forward"/>
</node>
</node>
</node>
</node>
</node>
</node>
</node>
</node>
</map>
