gerador_roteiros/tests/testfiles/0.9.0/generatorvalidation/invalid/nos_com_valores_branco.mm
<map version="0.9.0">
<!-- To view this file, download free mind mapping software FreeMind from http://freemind.sourceforge.net -->
<node CREATED="1346689536778" ID="ID_748873123" MODIFIED="1346689542356" TEXT="MM">
<node CREATED="1346689542660" ID="ID_1533877491" MODIFIED="1347458969527" POSITION="right" TEXT="UC:  &#xa;Requisitos: REQ001&#xa;Pr&#xe9;-condi&#xe7;&#xf5;es:  &#xa;P&#xf3;s-condi&#xe7;&#xf5;es: POS1">
<node CREATED="1346689552092" ID="ID_580376842" MODIFIED="1346689571401" TEXT="Sequ&#xea;ncia: 1&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: PASSO 1&#xa;">
<node CREATED="1346689572014" ID="ID_147630938" MODIFIED="1347458975231" TEXT="Sequ&#xea;ncia: 2&#xa;Ator:  &#xa;A&#xe7;&#xe3;o: PASSO 2">
<node CREATED="1346689583478" ID="ID_820022078" MODIFIED="1347458980590" TEXT="Sequ&#xea;ncia: 3&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o:       ">
<node CREATED="1346689593214" ID="ID_1390411586" MODIFIED="1346689601203" TEXT="Sequ&#xea;ncia: 4&#xa;Ator: Sistema&#xa;A&#xe7;&#xe3;o: PASSO 4"/>
</node>
</node>
</node>
</node>
</node>
</map>
